--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,8 @@ aiosqlite>=0.19.0
 # LangChain and AI
 langchain>=0.1.4
 langchain-community>=0.0.16
+langchain-core>=0.1.0
+langchain-text-splitters>=0.0.1
 langchain-google-genai>=0.0.6
 langchain-openai>=0.0.5
 chromadb>=0.4.22
@@ -40,3 +42,6 @@ python-telegram-bot>=20.7
 
 # Logging and monitoring
 loguru>=0.7.2
+
+# For Render deployment
+gunicorn>=21.2.0
