--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,8 +1,12 @@
 [phases.setup]
-nixPkgs = ["python39"]
+nixPkgs = ["python311"]
 
 [phases.install]
-cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
+cmds = [
+    "pip install --upgrade pip",
+    "pip install torch --index-url https://download.pytorch.org/whl/cpu",
+    "pip install -r requirements.txt"
+]
 
 [phases.build]
 cmds = ["python create_seed_faqs.py || true"]
