--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,8 +19,8 @@ COPY . .
 # Create data directories
 RUN mkdir -p data/logs data/chroma documents
 
-# Expose port
-EXPOSE 8000
+# Expose port (Railway uses dynamic PORT)
+EXPOSE ${PORT:-8000}
 
-# Run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the application - use shell form to expand $PORT environment variable
+CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
