--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -12,4 +12,4 @@ cmds = [
 cmds = ["python create_seed_faqs.py || true"]
 
 [start]
-cmd = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "sh -c 'uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}'"
