--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,47 +1,62 @@
+# =============================================================================
+# Campus Assistant - Python Dependencies
+# =============================================================================
+# Install with: pip install -r requirements.txt
+# For development: pip install -r requirements-dev.txt
+# =============================================================================
+
 # FastAPI and server
-fastapi>=0.109.0
-uvicorn[standard]>=0.27.0
-python-multipart>=0.0.6
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
+fastapi==0.115.6
+uvicorn[standard]==0.34.0
+python-multipart==0.0.20
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
 
 # Database
-sqlalchemy>=2.0.25
-aiosqlite>=0.19.0
+sqlalchemy==2.0.36
+aiosqlite==0.20.0
+asyncpg==0.30.0
+alembic==1.14.0
+greenlet==3.1.1
 
 # LangChain and AI
-langchain>=0.1.4
-langchain-community>=0.0.16
-langchain-core>=0.1.0
-langchain-text-splitters>=0.0.1
-langchain-google-genai>=0.0.6
-langchain-openai>=0.0.5
-chromadb>=0.4.22
-sentence-transformers>=2.3.1
+langchain==0.3.14
+langchain-community==0.3.14
+langchain-core==0.3.29
+langchain-text-splitters==0.3.4
+langchain-google-genai==2.0.7
+langchain-openai==0.3.0
+chromadb==0.5.23
+sentence-transformers==3.3.1
 
 # Document processing
-pypdf>=4.0.1
-python-docx>=1.1.0
+pypdf==5.1.0
+python-docx==1.1.2
 
-# Translation and NLP (FREE - no API key needed)
-deep-translator>=1.11.4
-langdetect>=1.0.9
+# Translation and NLP
+deep-translator==1.11.4
+langdetect==1.0.9
 
 # HTTP and async
-httpx>=0.26.0
-aiohttp>=3.9.1
+httpx==0.28.1
+aiohttp==3.11.11
 
 # Utilities
-pydantic>=2.5.3
-pydantic-settings>=2.1.0
-python-dotenv>=1.0.0
-tenacity>=8.2.3
+pydantic==2.10.4
+pydantic-settings==2.7.1
+python-dotenv==1.0.1
+tenacity==9.0.0
 
 # Telegram bot
-python-telegram-bot>=20.7
+python-telegram-bot==21.9
 
 # Logging and monitoring
-loguru>=0.7.2
+loguru==0.7.3
+sentry-sdk[fastapi]==2.19.2
+prometheus-client==0.21.1
 
-# For Render deployment
-gunicorn>=21.2.0
+# Production server
+gunicorn==23.0.0
+
+# Rate limiting
+slowapi==0.1.9
