fix(docker): fix Docker builds with proper multi-stage configuration
WHY: The frontend Dockerfile was incompatible with the Next.js config
(using 'export' mode but expecting 'standalone' output). The backend
used /tmp for ephemeral storage which lost data on every deploy.

CHANGES:
- Switch Next.js to 'standalone' output mode for Docker compatibility
- Add multi-stage builds for smaller production images
- Run containers as non-root users for security
- Add proper health checks to all containers
- Add PostgreSQL container for persistent database storage
- Use named volumes for data persistence (not /tmp)
- Pin frontend dependencies with exact versions
- Add testing dependencies (Jest, React Testing Library)
- Add security headers to Next.js config
- Update Node.js to v20 for frontend

The complete stack now includes:
- PostgreSQL for database (named volume)
- Backend API with health checks
- Frontend with standalone build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,34 +1,68 @@
-FROM python:3.11-slim
+# =============================================================================
+# Campus Assistant Backend - Production Dockerfile
+# =============================================================================
+# Multi-stage build for optimized production image
+# Build: docker build -t campus-assistant-backend .
+# Run: docker run -p 8000:8000 --env-file .env campus-assistant-backend
+# =============================================================================
+
+# Stage 1: Build dependencies
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
+# Install build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     libpq-dev \
-    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for caching
+# Install Python dependencies
 COPY requirements.txt .
 
-# Install CPU-only PyTorch first (much smaller than GPU version)
+# Install CPU-only PyTorch first (smaller than GPU version)
 RUN pip install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu
 
 # Install remaining requirements
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Stage 2: Production image
+FROM python:3.11-slim AS production
+
+WORKDIR /app
+
+# Install runtime dependencies only
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq5 \
+    curl \
+    && rm -rf /var/lib/apt/lists/* \
+    && useradd --create-home --shell /bin/bash appuser
+
+# Copy installed packages from builder
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
 # Copy application code
-COPY . .
+COPY --chown=appuser:appuser . .
 
-# Create data directories
-RUN mkdir -p data/logs data/chroma documents
+# Create data directories with proper permissions
+RUN mkdir -p data/logs data/chroma documents \
+    && chown -R appuser:appuser /app
 
-# Make start script executable
-RUN chmod +x start.sh
+# Switch to non-root user
+USER appuser
 
-# Expose port (Railway uses dynamic PORT)
-EXPOSE ${PORT:-8000}
+# Environment variables
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PORT=8000
 
-# Run the application via start script
-CMD ["./start.sh"]
+# Expose port
+EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:${PORT}/health || exit 1
+
+# Run the application
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT}"]
