--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,67 @@
-FROM node:18-alpine AS deps
-WORKDIR /app
-COPY package.json ./
-RUN npm install
+# =============================================================================
+# Campus Assistant Frontend - Production Dockerfile
+# =============================================================================
+# Multi-stage build for optimized Next.js production image
+# Build: docker build -t campus-assistant-frontend .
+# Run: docker run -p 3000:3000 -e NEXT_PUBLIC_API_URL=http://api:8000 campus-assistant-frontend
+# =============================================================================
 
-FROM node:18-alpine AS builder
+# Stage 1: Install dependencies
+FROM node:20-alpine AS deps
+
 WORKDIR /app
+
+# Install dependencies based on the preferred package manager
+COPY package.json package-lock.json* ./
+RUN npm ci --only=production=false
+
+# Stage 2: Build the application
+FROM node:20-alpine AS builder
+
+WORKDIR /app
+
+# Copy dependencies from deps stage
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
+# Set build-time environment variables
+ARG NEXT_PUBLIC_API_URL=http://localhost:8000
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+
+# Disable Next.js telemetry during build
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Build the application
 RUN npm run build
 
-FROM node:18-alpine AS runner
+# Stage 3: Production image
+FROM node:20-alpine AS runner
+
 WORKDIR /app
-ENV NODE_ENV production
 
+# Set production environment
+ENV NODE_ENV=production \
+    NEXT_TELEMETRY_DISABLED=1 \
+    PORT=3000
+
+# Create non-root user for security
+RUN addgroup --system --gid 1001 nodejs \
+    && adduser --system --uid 1001 nextjs
+
+# Copy the standalone build output
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
+# Switch to non-root user
+USER nextjs
+
+# Expose port
 EXPOSE 3000
-ENV PORT 3000
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:3000/ || exit 1
+
+# Run the application
 CMD ["node", "server.js"]
