--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@testing-library/dom": "^10.4.1",
     "clsx": "2.1.1",
     "lucide-react": "0.469.0",
     "next": "14.2.21",
